--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "amwork-test-todo",
+  "homepage": "https://dyv1k.github.io/Amwork-test-todo/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -26,6 +27,7 @@
     "deploy" : "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+
   },
   "eslintConfig": {
     "extends": [
